Added NamespaceIgnorantXmlTextReader to ignore namespaces

--- a/ProductsApp.Tests/ProductsApp.Tests.csproj
+++ b/ProductsApp.Tests/ProductsApp.Tests.csproj
@@ -46,11 +46,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainTests.cs" />
+    <Compile Include="NamespaceIgnorantXmlTextReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ProductsApp\ProductsApp.csproj">
+      <Project>{288c1013-0177-4e3f-9251-9afad2a3bfca}</Project>
+      <Name>ProductsApp</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
